Inserção e configuração do multer

--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -1,7 +1,7 @@
 <footer>
   <div class="container">
-    <div class="logo-icon">
-      <img src="img/icon-black.png" alt="Icone Petshop DH" />
+    <div class="logo-icon" href="/">
+      <img src="/img/icon-black.png" alt="Icone Petshop DH" />
     </div>
     <div class="info">
       <p>
