--- a/views/home/index.ejs
+++ b/views/home/index.ejs
@@ -49,7 +49,7 @@
       <section class="sobre">
         <div class="container">
           <img
-            src="img/ilustra-city.png"
+            src="/img/ilustra-city.png"
             alt="Ilustração de pessoa passeando com um cachorro na cidade"
           />
           <div class="text">
