--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -1,14 +1,14 @@
 <header>
   <div class="container">
-    <a class="logo" href="index.html"
-      ><img src="img/logo-white.png" alt="Petshop DH"
+    <a class="logo" href="/"
+      ><img src="/img/logo-white.png" alt="Petshop DH"
     /></a>
     <nav>
       <ul>
-        <li><a href="sobre.html">Sobre</a></li>
-        <li><a href="servicos.html">Serviços</a></li>
-        <li><a href="contato.html">Contato</a></li>
-        <li><a href="login.html">Login</a></li>
+        <li><a href="/upon">Sobre</a></li>
+        <li><a href="/services">Serviços</a></li>
+        <li><a href="/contact">Contato</a></li>
+        <li><a href="/login">Login</a></li>
       </ul>
     </nav>
   </div>
