Adição de Session

--- a/views/adm/pets/index.ejs
+++ b/views/adm/pets/index.ejs
@@ -15,7 +15,7 @@
   </head>
 
   <body>
-    <%- include('../../partials/header') %>
+    <%- include('../../partials/adm/header') %>
     <main>
       <section class="servicos-lista">
         <div class="container">
