--- a/views/adm/index.ejs
+++ b/views/adm/index.ejs
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>PETSHOP DH</title>
     <link rel="stylesheet" href="/css/style.css" />
+    <link rel="stylesheet" href="/css/admIndex.css" />
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -15,24 +16,20 @@
   </head>
 
   <body>
-    <%- include('../../partials/adm/header') %>
+    <%- include('../partials/adm/header.ejs') %>
 
     <main>
       <section class="servicos-lista">
         <div class="container">
-          <h1>Detalhes do Pet</h1>
-          <a href="/adm/pets" class="btn btn-primary mb-2">Lista de pets</a>
-          <article>
-            <img class="thumb" src="<%= pet.image %>" alt="Imagem do pet" />
-            <div class="info">
-              <h2><%= pet.name %></h2>
-              <p><strong>Especie:</strong> <%= pet.specie %></p>
-            </div>
-          </article>
+          <h1>Menu Principal</h1>
+          <div class="menu">
+            <a href="/adm/services/" class="btn btn-primary mb-5">Serviços</a>
+            <a href="/adm/pets/" class="btn btn-primary mb-5">Pets</a>
+          </div>
         </div>
       </section>
     </main>
 
-    <%- include('../../partials/footer') %>
+    <%- include('../partials/footer') %>
   </body>
 </html>
