--- a/views/adm/services/details.ejs
+++ b/views/adm/services/details.ejs
@@ -11,7 +11,7 @@
   </head>
 
   <body>
-    <%- include('../../partials/header') %>
+    <%- include('../../partials/adm/header') %>
     <main>
       <section class="servicos-lista">
         <div class="container">
