--- a/views/home/login.ejs
+++ b/views/home/login.ejs
@@ -6,6 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>PETSHOP DH</title>
     <link rel="stylesheet" href="/css/style.css" />
+    <link rel="stylesheet" href="/css/homeLogin.css" />
+
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -15,52 +17,48 @@
   </head>
 
   <body>
-    <%- include('../../partials/adm/header') %>
+    <%- include('../partials/header') %>
 
     <main>
       <section class="servicos-lista">
         <div class="container">
-          <h1>Atualização de Pets</h1>
-
-          <a href="/adm/pets" class="btn btn-primary mb-2">Lista de Pets</a>
-
-          <form method="POST" action="/adm/pets/<%= pet.id %>?_method=PUT">
+          <h1>Login</h1>
+          <div class="errors">
+            <% if(typeof error !== "undefined") { %>
+            <h3><%= error %></h3>
+            <h5>Não tem uma conta?</h5>
+            <a href="/register">Clique e cadastre-se</a>
+            <% } %>
+          </div>
+          <form action="/login" method="POST">
             <div class="mb-3">
-              <label for="" class="form-label">Imagem</label>
+              <label for="email" class="form-label">Email</label>
               <input
-                type="text"
-                name="image"
-                value="<%=pet.image %>"
+                type="email"
+                name="email"
+                id="email"
                 class="form-control"
+                placeholder="seuemail@exemplo.com"
               />
             </div>
 
             <div class="mb-3">
-              <label for="" class="form-label">Nome</label>
+              <label for="senha" class="form-label">Senha</label>
               <input
-                type="text"
-                name="name"
-                value="<%=pet.name %>"
+                type="password"
+                name="password"
+                id="senha"
                 class="form-control"
+                placeholder="********"
               />
             </div>
 
-            <div class="mb-3">
-              <label for="" class="form-label">Especie</label>
-              <input
-                type="text"
-                name="specie"
-                value="<%=pet.specie %>"
-                class="form-control"
-              />
-            </div>
-
-            <button type="submit" class="btn btn-primary">Salvar</button>
+            <button type="submit" class="btn btn-primary">Login</button>
           </form>
         </div>
       </section>
     </main>
 
-    <%- include('../../partials/footer') %>
+    <%- include('../partials/footer') %>
   </body>
 </html>
